# design_patterns

./: .gitignore  CMakeLists.txt  README.md
include/observer/: CurrentConditionDisplay.h  StatisticsDisplay.h  WeatherData.h
include/observer/abstract/: Subject.h
include/observer/interface/: DisplayElement.h  Observer.h
include/observer/struct/: Payload.h
include/strategy/: Duck.h  FlyNoWay.h  FlyWithWings.h  MallardDuck.h  QuackQuack.h  QuackSqueek.h  RubberDuck.h
include/strategy/interface/: FlyBehavior.h  QuackBehavior.h
src/: CMakeLists.txt
src/observer/: CMakeLists.txt  CurrentConditionDisplay.cpp  StatisticsDisplay.cpp  WeatherData.cpp
src/strategy/: Duck.cpp  MallardDuck.cpp  QuackSqueek.cpp
strategy/: CMakeLists.txt  FlyNoWay.cpp  FlyWithWings.cpp  QuackQuack.cpp  README.md  RubberDuck.cpp
tests/: CMakeLists.txt  test_observer.cpp  test_strategy.cpp
